# errore

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
docs/templates/: README.md.jinja  main.md.jinja  style.css
docs/templates/src/: lib.md.jinja
examples/: README.md
examples/actix/: Cargo.toml
examples/actix/src/: account.rs  error.rs  main.rs  subscriber.rs
examples/axum/: Cargo.toml
examples/axum/src/: account.rs  error.rs  formatter.rs  main.rs  subscriber.rs
examples/basic/: Cargo.toml
examples/basic/src/: account.rs  auth.rs  main.rs
examples/display/: Cargo.toml
examples/display/src/: main.rs
examples/formatter/: Cargo.toml
examples/formatter/src/: main.rs
examples/optional/: Cargo.toml  README.md
examples/optional/src/: lib.rs  result.rs  signup.rs
examples/subscriber/: Cargo.toml
examples/subscriber/src/: main.rs
examples/tokio/: Cargo.toml
examples/tokio/src/: main.rs  task.rs
examples/tracing/: Cargo.toml
examples/tracing/src/: main.rs
impl/: Cargo.toml
impl/src/: ast.rs  attr.rs  fmt.rs  generics.rs  lib.rs  prop.rs  util.rs  valid.rs
impl/src/expand/: display.rs  error.rs  mod.rs
scripts/: act.sh  build.sh  configure.sh  doc.sh  miri.sh  test.sh
src/: aserror.rs  data.rs  display.rs  downcast.rs  extensions.rs  extract.rs  formatter.rs  hash.rs  lib.md  lib.rs  location.rs  logging.rs  result.rs  span.rs  subscriber.rs  trace.rs
src/global/: ctor.rs  lazy.rs  mod.rs
tests/: compiletest.rs  test_deprecated.rs  test_display.rs  test_display_derive.rs  test_error.rs  test_expr.rs  test_formatter.rs  test_from.rs  test_generics.rs  test_lints.rs  test_metadata.rs  test_path.rs  test_result.rs  test_source.rs  test_trace_enum.rs  test_trace_mixed.rs  test_trace_struct.rs  test_transparent.rs
tests/no-std/: Cargo.toml  README.md
tests/no-std/src/: main.rs
tests/test_display/: test_brace_escape.stdout  test_braced.stdout  test_braced_unused.stdout  test_constants.stdout  test_enum.stdout  test_expr.stdout  test_field.stdout  test_inherit.stdout  test_ints.stdout  test_keyword.stdout  test_macro_rules.stdout  test_match.stdout  test_mixed.stdout  test_nested.stdout  test_nested_display.stdout  test_nested_tuple_field.stdout  test_raw.stdout  test_raw_conflict.stdout  test_raw_enum.stdout  test_trailing_comma.stdout  test_tuple.stdout  test_unit.stdout
tests/test_trace_enum/: test_trace_from_ec.stdout  test_trace_from_error.stdout  test_trace_result.stdout
tests/test_trace_mixed/: test_trace_duplicate_location.stdout  test_trace_func0.stdout  test_trace_func1.stdout  test_trace_func2.stdout  test_trace_func3.stdout  test_trace_func4.stdout  test_trace_func5.stdout  test_trace_func6.stdout  test_trace_func7.stdout  test_trace_func8.stdout  test_trace_iterator.stdout
tests/test_trace_struct/: test_trace_from_ec.stdout  test_trace_from_error.stdout  test_trace_result.stdout
tests/ui/: bad-field-attr.rs  concat-display.rs  duplicate-enum-source.rs  duplicate-fmt.rs  duplicate-struct-source.rs  duplicate-transparent.rs  fallback-impl-with-display.rs  fallback-impl-with-display.stderr  formatter-outside.rs  formatter-outside.stderr  from-not-source.rs  invalid-input-impl-anyway.rs  missing-display.rs  missing-display.stderr  missing-fmt.rs  no-display.rs  source-enum-not-error.rs  source-enum-unnamed-field-not-error.rs  source-struct-not-error.rs  source-struct-unnamed-field-not-error.rs  subscriber-outside.rs  subscriber-outside.stderr  transparent-display.rs  transparent-enum-many.rs  transparent-enum-not-error.rs  transparent-enum-source.rs  transparent-enum-unnamed-field-not-error.rs  transparent-struct-many.rs  transparent-struct-not-error.rs  transparent-struct-source.rs  transparent-struct-unnamed-field-not-error.rs  unexpected-field-fmt.rs  unexpected-struct-source.rs  union.rs  union.stderr
tests/utils/: Cargo.toml
tests/utils/src/: lib.rs
