[package]
name = "errore-impl"
description = "Implementation detail of the `errore` crate"
authors.workspace = true
edition.workspace = true
exclude.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version = "0.1.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.74"
quote = "1.0.35"
syn = { version = "2.0.46", features = ["parsing"] }

[package.metadata.docs.rs]
rustdoc-args.workspace = true
targets.workspace = true
