[package]
name = "example-actix"
description = "Example of how to use errore with the actix crate"
edition.workspace = true
license.workspace = true
publish = false
version.workspace = true

[dependencies]
actix-web = "4.9.0"
env_logger = { version = "0.11.5" }
errore = { path = "../.." }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
