[package]
name = "example-axum"
description = "Example of how to use errore with the axum crate"
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
axum = "0.7"
errore = { path = "../.." }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6.1", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
